# PulseHome

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  devices.rs  lib.rs  main.rs  mediator.rs  models.rs  observer.rs
src/devices/: door_lock.rs  light.rs  thermostat.rs
src/models/: device.rs  event.rs
src/observer/: display_observer.rs  logger_observer.rs
